<resources>
    <string name="app_name">NBA Team Selection</string>
    <string name="qa_app_name">(QA) NBA Team Selection</string>
    <string name="prod_app_name">NBA Team Selection</string>
    <string name="app_title">NBA Team Picker</string>
    <string name="loading_text">Loading...\nPlease wait</string>
    <string name="loading_family">Loading Family Details\nPlease wait</string>
    <string name="uploading_text">Uploading your document</string>
    <string name="network_text">You are currently not online...</string>
    <string name="app_exit_text">Click again to exit vHealth App</string>
    <string name="txt_activate_account">Activating your account</string>
    <string name="empty_string"> </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_healthdata">Health Data</string>
    <string name="title_my_records">My Record</string>
    <string name="title_more">More</string>
    <string name="title_more_account">My Account</string>
    <string name="title_more_help">Help &amp; Support</string>
    <string name="title_photo_preview">Image Preview</string>
    <string name="btn_help"><b>?</b></string>
    <string name="title_more_about">About</string>
    <string name="title_more_wellness">Wellness</string>
    <string name="title_more_logout">Logout</string>
    <string name="filter_view_https_vhealth_dubai">filter_view_https_vhealth_dubai</string>
    <string name="slide_01">See a vHealth doctor at a time that suits you</string>
    <string name="slide_02">Get trusted wellness and medical advice</string>
    <string name="slide_03">Our doctors are available 8am - 8pm Monday to Saturday</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="ineligible_title">I\'m sorry this service is not yet available for you</string>
    <string name="ineligible_content">Sorry, at this time vHealth is only available for limited members in certain geographies. Eligible members will receive an email invitation once vHealth is available for them.</string>
    <string name="home_subtitle">Your next available appointments are</string>
    <string name="book_app_error_next_avail">Next available</string>
    <string name="home_while_slot_load">Loading your next available appointments...</string>
    <string name="today">Tomorrow</string>
    <string name="time">8:00 pm</string>
    <string name="time1">8:30 pm</string>
    <string name="time2">9:00 pm</string>
    <string name="btn_availability">See all availability</string>
    <string name="home_health">Connect to your Health Kit to track your health data</string>
    <string name="home_health_connected">Your Health kit is connected</string>
    <string name="btn_view_all">View all</string>
    <string name="home_medical">Keep track of medical records</string>
    <string name="txt_well_being">Well-being</string>
    <string name="txt_calm">Calm</string>
    <string name="calm_subtxt">Meditation and Sleep Stories</string>
    <string name="image">image view</string>
    <string name="bck_to_home">Back to Homepage</string>
    <string name="btn_setupGoogleFit">Sync your health data</string>
    <string name="txt_notify_push">Phone notification</string>
    <string name="txt_notify_text">Text</string>
    <string name="txt_notify_email">Email</string>
    <string name="btn_nothanks">No thanks</string>
    <string name="btn_synch_health_data">Sync your health data</string>
    <string name="txt_tab_googlefit">vHealth would like to access the health data on your phone. This will allow you to keep track of all your health and fitness data in one place</string>
    <string name="txt_your_medical_notes">Your medical notes</string>
    <string name="txt_your_medical_subtext">Notes from your doctor on your general health will be added here. Notes specific to your consultations will be stored in your</string>
    <string name="txt_appointment_history">appointment history.</string>
    <string name="txt_setup_googlefit_heading">Track your health &amp; fitness</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="notify_preferred_methods">We need atleast one way to contact you. Please choose your preferred methods</string>
    <string name="something_wrong_try_later">Unfortunately we’re unable to proceed at this moment…\nPlease try again in few minutes</string>
    <string name="pms_error_response">401050</string>
    <string name="pms_user_error_message">Unfortunately we’re unable to locate your details to proceed. Please contact the vHealth support team for assistance.\n\nsupport@vhealth.co.ae\n800035704672(UAE)\n+9714 871 0100 (outside UAE)
</string>
    <string name="retry">Retry</string>
    <string name="txt_setup_notificaiton_heading">Turn on notifications</string>
    <string name="txt_setup_notificaiton_subtext">Please select at least one of the options below, so we can send you information and reminders about your consultations.</string>
    <string name="txt_setup_notificaiton_all">Turn on all notifications</string>
    <string name="Nxt_app">Your next appointment</string>
    <string name="txt_vieworedit">View or edit details</string>
    <string name="btn_book_appointment">Book another appointment</string>
    <string name="txt_mapmyrun">Map My Run by Under Armour</string>
    <string name="mapmyrun_subtxt">GPS Running &amp; Workout Tracker</string>
    <string name="txt_myfitnesspal">MyFitnessPal</string>
    <string name="myfitness_subtxt">Calorie Counter &amp; Diet Tracker</string>
    <string name="txt_reg_step1_minor_heading">Members under 18</string>
    <string name="txt_reg_step1_major_eading">Your members</string>
    <string name="txt_reg_step1_heading">Give your family access to vHealth</string>
    <string name="txt_reg_step1_subtext">Please provide an email address for each family member on your policy. We’ll then send them an invitation to activate their vHealth account.</string>
    <string name="title_stayin_touch">How should we \nstay in touch?</string>
    <string name="stayin_touch_subtxt">Aetna would like to stay in touch with you for marketing purposes. If you’re happy for us to update you on our latest products and services, please confirm the best way to contact you.</string>
    <string name="stayin_customer_subtxt">Aetna is often looking to develop its products and services. If you’re happy to take part in our customer research, please confirm the best way for us to get in touch.</string>
    <string name="stayin_service_title">Service &amp; product news</string>
    <string name="stayin_customer_title">Customer research</string>
    <string name="aetna_policy_text">To read more about how we keep your data secure, please see our <a href='https://www.vhealth.co.ae/vHealthDubai/privacy-policy'>Privacy Policy</a> </string>
    <string name="txt_reg_step4_1">In order to continually improve and optimise our services, we would like your permission to share data with Aetna International.</string>
    <string name="txt_reg_step4_2">Everything you share with your doctor will be kept completely confidential and under no circumstances will it affect your insurance premiums.</string>
    <string name="txt_book_appointment_heading">Give your appointment a name</string>
    <string name="txt_book_appointment_subtext">Choose something that\'s easy to remember, like knee pain, chesty cough or migraine.</string>
    <string name="txt_book_appointment_subtext2">You will also be able to upload notes or images for the doctor once your booking is confirmed.</string>
    <string name="txt_book_symptom_heading">Tell us about your symptoms</string>
    <string name="txt_book_symptom_subtext">What is the main problem? How long have you had these symptoms? Is it getting better or worse? This information will help your doctor ahead of your consultation.</string>
    <string name="txt_book_number_heading">Which number should we call you on?</string>
    <string name="txt_book_number_subtext">Please select one of the telephone numbers below or add/edit an alternative number which you would like to use for this call.</string>
    <string name="txt_book_doc_heading">Add document or image</string>
    <string name="txt_book_doc_subtext">Please upload any images or documents you feel would be useful for doctor in your consultation</string>
    <string name="txt_book_doc_heading_uploaded">Your document has been Added</string>
    <string name="txt_book_doc_subtext_uploaded">Documents will be uploaded at the end of the booking process</string>
    <string name="txt_primary_num_not_available">Unfortunately, there is no phone number associated to your account.Please update the primary phone number in My details section to proceed further.</string>
    <string name="txt_primary_num_not_avail_navi">More \u2192 My Account \u2192 My Details \u2192 Edit Phone Number</string>
    <string name="txt_book_doc_filetype">Choose file type</string>
    <string name="txt_book_doc_type_subtext">Make sure your file is under 10mb, you can upload an image (PNG/JPEG),PDF,Word</string>
    <string name="txt_book_pic_subtext">Take a picture</string>
    <string name="txt_book_photos_subtext">Choose from photos</string>
    <string name="txt_book_file_subtext">Upload a file</string>
    <string name="txt_book_rev_heading">Are these details correct?</string>
    <string name="txt_book_rev_subtext">Please check before confirming your appointment.</string>
    <string name="txt_book_number_alternate_text">Add an alternate number for this consultation</string>
    <string name="txt_book_you_num">Your number</string>
    <string name="txt_book_num_alternative">Alternative number</string>
    <string name="txt_book_error">Sorry, the appointment you have choosen is no longer available </string>
    <string name="txt_book_error_subtext">Please choose an alternative from the options below </string>
    <string name="txt_book_rev_name">Appointment Name</string>
    <string name="txt_book_rev_follow_name">Follow up from</string>
    <string name="txt_book_rev_on">On</string>
    <string name="txt_book_rev_type">Type</string>
    <string name="txt_book_hint_symp">Describe your symptoms (optional)</string>
    <string name="txt_book_rev_symp">Symptoms</string>
    <string name="txt_book_rev_file">Files</string>
    <string name="txt_hint_apppointment"><i>Appointment Name</i></string>
    <string name="txt_hint_ph_num">Phone Number</string>
    <string name="txt_hint_contry_code">Country Code</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="morning_time">8 am - 11.30 pm</string>
    <string name="noon_time">12 pm - 3.30 pm</string>
    <string name="evening_time">4 pm - 8 pm</string>
    <string name="morning">Morning</string>
    <string name="txt_btn_finish">Finish</string>
    <string name="txt_btn_save">Save</string>
    <string name="txt_btn_save_changes">Save Changes</string>
    <string name="txt_btn_exit">Exit</string>
    <string name="txt_btn_yes">Yes</string>
    <string name="txt_btn_no">No</string>
    <string name="txt_btn_rtn_booking">Return to booking</string>
    <string name="txt_btnbookafollowup">Book a follow up</string>
    <string name="swp_btnbookafollowup">Book a \nfollow up</string>
    <string name="txt_btnkeepapp">Keep this appointment</string>
    <string name="txt_cancelapp">Cancel appointment</string>
    <string name="division">DIVISION</string>
    <string name="conference">CONFERENCE</string>
    <string name="city">CITY</string>
    <string name="name">Name</string>
    <string name="select_team">SELECT TEAM</string>
</resources>