<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="name"
            type="String" />

        <variable
            name="teamDetail"
            type="com.nbateampicker.data.entity.TeamDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/tvTitleNameLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="top"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="10dp"
                android:text="@string/select_team"
                android:textColor="@color/color_black"
                android:textSize="16sp"
                tools:text="@string/select_team"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/nbaSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:drawSelectorOnTop="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleNameLbl" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/detailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nbaSpinner">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription=""
                    android:importantForAccessibility="no"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTeamNameLbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/name"
                        android:textColor="@color/color_black"
                        android:textSize="16sp"
                        tools:text="Name" />

                    <TextView
                        android:id="@+id/tvTeamNameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:text="@{teamDetail.name}"
                        android:textColor="@color/color_black"
                        android:textSize="14sp"
                        tools:text="Detroit" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription=""
                    android:importantForAccessibility="no"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTeamCityLbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/city"
                        android:textColor="@color/color_black"
                        android:textSize="16sp"
                        tools:text="@string/city" />

                    <TextView
                        android:id="@+id/tvTeamCityTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:text="@{teamDetail.city}"
                        android:textColor="@color/color_black"
                        android:textSize="14sp"
                        tools:text="Detroit Pistons" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription=""
                    android:importantForAccessibility="no"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTeamConferenceLbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/conference"
                        android:textColor="@color/color_black"
                        android:textSize="16sp"
                        tools:text="@string/conference" />

                    <TextView
                        android:id="@+id/tvTeamConferenceTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:text="@{teamDetail.conference}"
                        android:textColor="@color/color_black"
                        android:textSize="14sp"
                        tools:text="Conference" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription=""
                    android:importantForAccessibility="no"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTeamDivisionLbl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_bold"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/division"
                        android:textColor="@color/color_black"
                        android:textSize="16sp"
                        tools:text="@string/division" />

                    <TextView
                        android:id="@+id/tvTeamDivisionTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans"
                        android:gravity="top"
                        android:paddingStart="10dp"
                        android:text="@{teamDetail.division}"
                        android:textColor="@color/color_black"
                        android:textSize="14sp"
                        tools:text="Central" />
                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/displayProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:background="@color/system_bar_background_semi_transparent">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
